--- a/templates/item/item-armor-sheet.hbs
+++ b/templates/item/item-armor-sheet.hbs
@@ -30,7 +30,7 @@
             </td>
             <td>
               <button style ="max-width:fit-content;text-align:left" class="fakeButton" addUpgradeBtn id="addUpgradeBtn">ADD</button>
-                <select name="upgradesSelector" data-armorType="armor" id="upgradesSelector">
+                <select name="upgradesSelector" data-itemType="armor" id="upgradesSelector">
                   <option value="Upgrades">Upgrades</option>
               </select>
             </td>
