--- a/templates/item/item-meleeWeapon-sheet.hbs
+++ b/templates/item/item-meleeWeapon-sheet.hbs
@@ -11,9 +11,28 @@
       <h1 class="charname">
         <input name="name" type="text" value="{{ item.name }}" placeholder="Name" />
       </h1>
-	  Equipped: <input type="checkbox" name="system.itemEquipped" {{checked system.itemEquipped}} />		  
-	  
-    
+      <table style="text-align:left">
+          <tr>
+            <td style="text-align:left">
+              Equipped: <input type="checkbox" equipItem name="system.itemEquipped" {{checked system.itemEquipped}} /><br>
+            </td>
+            <td>
+              <button style ="max-width:fit-content;text-align:left" class="fakeButton" addUpgradeBtn id="addUpgradeBtn">ADD</button>
+                <select name="upgradesSelector" data-itemType="melee" id="upgradesSelector">
+                  <option value="Upgrades">Upgrades</option>
+              </select>
+            </td>
+          </tr>
+          <tr>
+            <td style="text-align:left">
+              Number Owned:<input style="text-align:center;width:35px;" type="number" name="system.quantity" value="{{system.quantity}}" />
+            </td>
+            <td style="display:inline-block">
+                <span id="upgradeDetails" name="upgradeDetails"></span>
+                <span id="upgradeCost" name="upgradeCost"></span>
+            </td>
+          </tr>
+        </table>    
     </div>
   </header>
   
@@ -65,6 +84,7 @@
           <td>Load</td>
           <td>Crit Bonus Roll</td>
           <td>Crit Bonus</td>
+          <td>CND</td>
         </tr>
         <tr>
           {{#if system.consumesAmmo}}
@@ -98,6 +118,14 @@
               value="{{ system.critical.multiplier }}"
             />
           </td>
+          <td>
+            <input title="0 is Broken, 10 is Full Functionality"
+              type="number"
+              name="{{item.system.decay}}"
+              value="{{item.system.decay}}"
+              data-set-decay
+              data-weapon-id="{{ item._id }}">
+          </td>
         </tr>
       </table>	
 	
@@ -108,7 +136,61 @@
     </div>
     {{!-- Upgrades Tab --}}
     <div class="tab" data-group="primary" data-tab="upgrades">
-		{{editor system.upgrades target="system.upgrades" button=true engine="prosemirror"}} 	
+		{{#LesserThan system.baseCost 1}}
+        <div>Select an upgrade and press the ADD button above to upgrade your weapon. Upgrades will appear here as you add them. </div>
+        {{else}}
+        <ol>
+          {{#each system.upgrades as |key|}}
+            {{#if key.id}}
+            <div class="box-perks">
+              <li class="item flexrow" data-item-id="{{ key.id }}">
+                <table class="perk-table" style="border: solid 1px">
+                  <tr>
+                    <td>
+                      <div class="perk-div">
+                        <h3>{{ key.name }}</h3>
+                        <a
+                          class="item-control"
+                          seeUpgrade
+                          id="{{ key.id }}"
+                          title="View Item Details"
+                        >
+                          <img title="{{key.description}}" class="perk-image" src="{{key.img}}" />
+                        </a>
+                      </div>
+                      <div class="perk-div">
+                        <i
+                          style="padding: 3px"
+                          downgradeRank
+                          id="{{key.id}}"
+                          name="{{ key.rank }}"
+                          class="fas fa-minus-square"
+                        ></i>
+                        {{ key.rank }}
+                        <i
+                          style="padding: 3px"
+                          upgradeRank
+                          id="{{key.id}}"
+                          name="{{ key.rank }}"
+                          class="fas fa-plus-square"
+                        ></i>
+                      </div>
+                      <li class="item flexrow" data-item-id="{{ item._id }}">
+                        <div class="item-controls" style="background: black">
+                          <a class="item-control upgrade-delete" deleteUpgrade title="Delete Upgrade" id="delete{{key.id}}">
+                            <i class="fas fa-trash"></i>
+                          </a>
+                        </div>
+                      </li>
+                    </td>
+                  </tr>
+                </table>
+              </li>
+            </div>
+            {{/if}}
+          {{/each}}
+        </ol>
+        {{/LesserThan}}
 	</div>
 
     {{!-- Effects Tab --}}
