--- a/templates/actor/parts/actor-backpack.hbs
+++ b/templates/actor/parts/actor-backpack.hbs
@@ -15,13 +15,22 @@
                     <a class="item-control item-delete" title="{{localize 'DOCUMENT.Delete' type='item'}}">
                         <i class="fas fa-trash"></i>
                     </a>
-                    <a style="float: right; margin-left: 10px"
+                    <a style="float: right; margin-left: 5px"
                        data-equip
                        data-item-id="{{ item._id }}"
                        class="item-control"
                        title="Equip a weapon">
                         <i class="fas fa-tshirt"></i>
                     </a>
+                    {{#DifferentFrom item.system.description ""}}
+                    <a style="float: right; margin-left: 5px"
+                       data-sendToChat
+                       data-item-id="{{ item._id }}"
+                       class="item-control"
+                       title="Send description to Chat">
+                        <i class="fa-solid fa-comment"></i>
+                    </a>
+                    {{/DifferentFrom}}
                 </div>
             </li>
             {{/unless}}
@@ -39,13 +48,22 @@
                                            title="{{localize 'DOCUMENT.Delete' type='item'}}">
                         <i class="fas fa-trash"></i>
                     </a>
-                    <a style="float: right; margin-left: 10px"
+                    <a style="float: right; margin-left: 5px"
                        data-equip
                        data-item-id="{{ item._id }}"
                        class="item-control"
                        title="Equip a weapon">
                         <i class="fas fa-tshirt"></i>
                     </a>
+                    {{#DifferentFrom item.system.description ""}}
+                    <a style="float: right; margin-left: 5px"
+                       data-sendToChat
+                       data-item-id="{{ item._id }}"
+                       class="item-control"
+                       title="Send description to Chat">
+                        <i class="fa-solid fa-comment"></i>
+                    </a>
+                    {{/DifferentFrom}}
                 </div>
             </li>
             {{/unless}}
@@ -63,13 +81,22 @@
                                            title="{{localize 'DOCUMENT.Delete' type='item'}}">
                         <i class="fas fa-trash"></i>
                     </a>
-                    <a style="float: right; margin-left: 10px"
+                    <a style="float: right; margin-left: 5px"
                        data-equip
                        data-item-id="{{ item._id }}"
                        class="item-control"
                        title="Equip an armor">
                         <i class="fas fa-tshirt"></i>
                     </a>
+                    {{#DifferentFrom item.system.description ""}}
+                    <a style="float: right; margin-left: 5px"
+                       data-sendToChat
+                       data-item-id="{{ item._id }}"
+                       class="item-control"
+                       title="Send description to Chat">
+                        <i class="fa-solid fa-comment"></i>
+                    </a>
+                    {{/DifferentFrom}}
                 </div>
             </li>
             {{/unless}}
@@ -87,13 +114,22 @@
                                            title="{{localize 'DOCUMENT.Delete' type='item'}}">
                         <i class="fas fa-trash"></i>
                     </a>
-                    <a style="float: right; margin-left: 10px"
+                    <a style="float: right; margin-left: 5px"
                        data-equip
                        data-item-id="{{ item._id }}"
                        class="item-control"
                        title="Enter Power Armor (cost: 6AP)">
                         <i class="fas fa-tshirt"></i>
                     </a>
+                    {{#DifferentFrom item.system.description ""}}
+                    <a style="float: right; margin-left: 5px"
+                       data-sendToChat
+                       data-item-id="{{ item._id }}"
+                       class="item-control"
+                       title="Send description to Chat">
+                        <i class="fa-solid fa-comment"></i>
+                    </a>
+                    {{/DifferentFrom}}
                 </div>
             </li>
             {{/unless}}
