Added Chat Buttons

--- a/templates/actor/items/equipped-armor.hbs
+++ b/templates/actor/items/equipped-armor.hbs
@@ -65,6 +65,15 @@
                                    title="Unequip an armor">
                                     <i class="fas fa-tshirt"></i>
                                 </a>
+                                {{#DifferentFrom item.system.description ""}}
+                                    <a style="float: right; margin-right: 10px"
+                                    data-sendToChat
+                                    data-item-id="{{ item._id }}"
+                                    class="item-control"
+                                    title="Send description to Chat">
+                                        <i class="fa-solid fa-comment"></i>
+                                    </a>
+                                {{/DifferentFrom}}
                             </details>
                             </div>
                         </t>
@@ -139,6 +148,15 @@
                                    title="Exit Power Armor (cost: 6AP)">
                                     <i class="fas fa-tshirt"></i>
                                 </a>
+                                {{#DifferentFrom item.system.description ""}}
+                                    <a style="float: right; margin-right: 10px"
+                                    data-sendToChat
+                                    data-item-id="{{ item._id }}"
+                                    class="item-control"
+                                    title="Send description to Chat">
+                                        <i class="fa-solid fa-comment"></i>
+                                    </a>
+                                {{/DifferentFrom}}
                             </details>
                             </div>
                         </t>
