--- a/templates/actor/items/ammo.hbs
+++ b/templates/actor/items/ammo.hbs
@@ -18,6 +18,15 @@
                 title="{{localize 'DOCUMENT.Delete' type='item'}}"
               >
                 <i class="fas fa-trash"></i>
+                {{#DifferentFrom item.system.description ""}}
+                  <a style="float: right; margin-left: 5px"
+                      data-sendToChat
+                      data-item-id="{{ item._id }}"
+                      class="item-control"
+                      title="Send description to Chat">
+                      <i class="fa-solid fa-comment"></i>
+                  </a>
+                {{/DifferentFrom}}
               </a>
             </div>
           </div>
