--- a/templates/actor/items/explosives.hbs
+++ b/templates/actor/items/explosives.hbs
@@ -139,6 +139,15 @@
                            title="{{localize 'DOCUMENT.Update' type='item'}}">
                             <i class="fas fa-edit"></i>
                         </a>
+                        {{#DifferentFrom item.system.description ""}}
+                            <a style="float: right; margin-right: 10px"
+                            data-sendToChat
+                            data-item-id="{{ item._id }}"
+                            class="item-control"
+                            title="Send description to Chat">
+                                <i class="fa-solid fa-comment"></i>
+                            </a>
+                        {{/DifferentFrom}}
                     </div>
                 </details>
             </td>
