--- a/templates/actor/parts/actor-backpack.hbs
+++ b/templates/actor/parts/actor-backpack.hbs
@@ -178,6 +178,15 @@
                                title="{{localize 'DOCUMENT.Delete' type='item'}}">
                                 <i class="fas fa-trash"></i>
                             </a>
+                        {{#DifferentFrom item.system.description ""}}
+                            <a style="float: right; margin-left: 5px"
+                            data-sendToChat
+                            data-item-id="{{ item._id }}"
+                            class="item-control"
+                            title="Send description to Chat">
+                                <i class="fa-solid fa-comment"></i>
+                            </a>
+                        {{/DifferentFrom}}
                         </div>
                     </li>
                 </td>
@@ -220,6 +229,15 @@
                                    title="{{localize 'DOCUMENT.Delete' type='item'}}">
                                     <i class="fas fa-trash"></i>
                                 </a>
+                            {{#DifferentFrom item.system.description ""}}
+                                <a style="float: right; margin-left: 5px"
+                                data-sendToChat
+                                data-item-id="{{ item._id }}"
+                                class="item-control"
+                                title="Send description to Chat">
+                                    <i class="fa-solid fa-comment"></i>
+                                </a>
+                            {{/DifferentFrom}}
                             </div>
                         </li>
                     </td>
@@ -257,6 +275,15 @@
                                        title="{{localize 'DOCUMENT.Delete' type='item'}}">
                                         <i class="fas fa-trash"></i>
                                     </a>
+                                {{#DifferentFrom item.system.description ""}}
+                                    <a style="float: right; margin-left: 5px"
+                                    data-sendToChat
+                                    data-item-id="{{ item._id }}"
+                                    class="item-control"
+                                    title="Send description to Chat">
+                                        <i class="fa-solid fa-comment"></i>
+                                    </a>
+                                {{/DifferentFrom}}
                                 </div>
                             </li>
                         </td>
