--- a/templates/actor/status/skills.hbs
+++ b/templates/actor/status/skills.hbs
@@ -12,9 +12,7 @@ Points: {{#Sum startingSkillpoints skillPool}}{{/Sum}}
                 <label for="{{ abilityKey }}"
                        class="resource-label rollable"
                        data-rollable
-                       data-roll="d20+{{#Sum skill.base skill.modifiers}}{{/Sum}}+{{#with (lookup ../../abilities [abilityKey])}} {{
-            mod
-          }} {{/with}}-{{../../penaltyTotal}}+@luckmod"
+                       data-roll="d20+{{#Sum skill.base skill.modifiers}}{{/Sum}}+{{#with (lookup ../../abilities [abilityKey])}} {{mod}} {{/with}}{{#GreaterThan penaltyTotal 1}}-@penaltyTotal{{/GreaterThan}}{{#GreaterThan luckmod 1}}+@luckmod{{/GreaterThan}}"
                        data-label="Performed a {{
             skill.label
           }} roll using {{#with (lookup ../../abilities [abilityKey])}}{{ label }} {{/with}}">
@@ -40,7 +38,3 @@ Points: {{#Sum startingSkillpoints skillPool}}{{/Sum}}
     </tr>
     {{/each}}
 </table>
-
-{{#each penalties}}
-{{penalty.label}}<br />
-{{/each}}
